--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -28,6 +28,7 @@ jobs:
       uses: shivammathur/setup-php@master
       with:
         php-version: ${{ matrix.php-versions }}
+        tools: composer:v1
         coverage: none
     - name: Lint
       run: composer run lint
@@ -42,6 +43,7 @@ jobs:
       uses: shivammathur/setup-php@master
       with:
         php-version: 7.4
+        tools: composer:v1
         coverage: none
     - name: Install dependencies
       run: composer i
@@ -59,7 +61,8 @@ jobs:
           uses: shivammathur/setup-php@master
           with:
               php-version: 7.4
-              extension-csv: ctype,curl,dom,gd,iconv,intl,json,mbstring,openssl,posix,sqlite,xml,zip
+              tools: composer:v1
+              extensions: ctype,curl,dom,gd,iconv,intl,json,mbstring,openssl,posix,sqlite,xml,zip
               coverage: xdebug
         - name: Checkout Nextcloud
           run: git clone https://github.com/nextcloud/server.git --recursive --depth 1 -b ${{ matrix.nextcloud-versions }} nextcloud
