--- a/package.json
+++ b/package.json
@@ -73,7 +73,8 @@
     "vue-slide-up-down": "^2.0.1",
     "vue-tabs-component": "^1.5.0",
     "vuex": "^3.6.0",
-    "vuex-router-sync": "^5.0.0"
+    "vuex-router-sync": "^5.0.0",
+    "webdav": "^3.6.1"
   },
   "browserslist": [
     "extends @nextcloud/browserslist-config"
