--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       matrix:
         php-versions: ['7.2', '7.3', 7.4]
-        nextcloud-versions: ['master']
+        nextcloud-versions: ['stable20']
     name: php${{ matrix.php-versions }} unit tests
     steps:
     - name: Set up php${{ matrix.php-versions }}
