Add a js unit testing action
Signed-off-by: Christoph Wurst <christoph@winzerhof-wurst.at>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -127,3 +127,18 @@ jobs:
               file: ./nextcloud/apps/mail/tests/clover.integration.xml
               flags: integrationtests
               fail_ci_if_error: true
+  frontend-unit-test:
+      runs-on: ubuntu-latest
+      name: Front-end unit tests
+      steps:
+          - uses: actions/checkout@master
+          - name: Set up Node
+            uses: actions/setup-node@v1
+            with:
+                node-version: 12.x
+          - name: npm install
+            run: npm install
+          - name: run tests
+            run: npm run test
+      env:
+          CI: true
