--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,9 @@
 		"sabberworm/php-css-parser": "^8.7.0",
 		"youthweb/urllinker": "^2.0"
 	},
+	"provide": {
+		"psr/log": "^1.0.4|^2|^3"
+	},
 	"require-dev": {
 		"fig/log-test": "^1.1",
 		"psalm/phar": "^5.26.1",
