--- a/.github/workflows/psalm-matrix.yml
+++ b/.github/workflows/psalm-matrix.yml
@@ -21,7 +21,7 @@ jobs:
       # do not stop on another job's failure
       fail-fast: false
       matrix:
-        ocp-version: [ 'stable30', 'dev-stable31' ]
+        ocp-version: [ 'dev-stable30', 'dev-stable31' ]
 
     name: static-psalm-analysis ${{ matrix.ocp-version }}
     steps:
