--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@mdi/svg": "^7.4.47",
     "@nextcloud/auth": "^2.4.0",
     "@nextcloud/axios": "^2.5.1",
-    "@nextcloud/calendar-js": "^6.1.0",
+    "@nextcloud/calendar-js": "^8.1.1",
     "@nextcloud/cdav-library": "^1.5.2",
     "@nextcloud/dialogs": "^5.3.8",
     "@nextcloud/files": "^3.10.2",
@@ -50,6 +50,7 @@
     "@nextcloud/moment": "^1.3.2",
     "@nextcloud/paths": "^2.2.1",
     "@nextcloud/router": "^3.0.1",
+    "@nextcloud/timezones": "^0.1.1",
     "@nextcloud/vue": "^8.22.0",
     "@pinia/testing": "^0.1.7",
     "@riophae/vue-treeselect": "^0.4.0",
@@ -60,7 +61,7 @@
     "debounce-promise": "^3.1.2",
     "dompurify": "^3.2.4",
     "html-to-text": "^9.0.5",
-    "ical.js": "^1.5.0",
+    "ical.js": "^2.1.0",
     "iframe-resizer": "^4.4.5",
     "js-base64": "^3.7.7",
     "jstz": "^2.1.1",
