--- a/.github/workflows/update-public-suffix-list.yml
+++ b/.github/workflows/update-public-suffix-list.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        branches: ['main', 'stable4.2', 'stable3.7']
+        branches: ['main', 'stable4.3', 'stable4.2', 'stable3.7']
 
     name: update-public-suffix-list-${{ matrix.branches }}
 
