--- a/.github/workflows/npm-audit-fix.yml
+++ b/.github/workflows/npm-audit-fix.yml
@@ -21,7 +21,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        branches: ['main', 'stable3.7', 'stable3.6']
+        branches: ['main', 'stable4.3', 'stable4.2', 'stable3.7']
 
     name: npm-audit-fix-${{ matrix.branches }}
 
