ci: Fix yaml typo
Signed-off-by: Christoph Wurst <christoph@winzerhof-wurst.at>

--- a/.github/workflows/appstore-conventional-build-publish.yml
+++ b/.github/workflows/appstore-conventional-build-publish.yml
@@ -11,7 +11,7 @@ name: Build and publish app release conventionally
 on:
   workflow_dispatch:
     branches: stable*
-    input:
+    inputs:
       prerelease:
         description: 'Pre-release'
         type: boolean
