fix: printing email threads and singular emails
fix: printing email threads and singular emails

Signed-off-by: Grigory Vodyanov <scratchx@gmx.com>

--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "@ckeditor/ckeditor5-ui": "38.1.1",
     "@ckeditor/ckeditor5-upload": "38.1.1",
     "@ckeditor/ckeditor5-vue2": "^3.0.1",
+    "@iframe-resizer/child": "^5.3.3",
+    "@iframe-resizer/parent": "^5.3.3",
     "@mdi/svg": "^7.4.47",
     "@nextcloud/auth": "^2.4.0",
     "@nextcloud/axios": "^2.5.1",
@@ -62,7 +64,7 @@
     "dompurify": "^3.2.4",
     "html-to-text": "^9.0.5",
     "ical.js": "^2.1.0",
-    "iframe-resizer": "^4.4.5",
+    "iframe-resizer": "^5.3.3",
     "js-base64": "^3.7.7",
     "jstz": "^2.1.1",
     "lodash": "^4.17.21",
