chore(github): Assign types to issues from forms
Signed-off-by: Christoph Wurst <christoph@winzerhof-wurst.at>

--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,5 +1,6 @@
 name: "Feature request"
 description: "You have a neat idea that should be implemented?"
+type: "Enhancement"
 labels: ["enhancement", "0. to triage"]
 body:
   - type: textarea
