--- a/.github/ISSUE_TEMPLATE/bug_report_form.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report_form.yml
@@ -1,5 +1,6 @@
 name: "Bug"
 description: "Have you encountered a bug? Submit a report and help us improve Nextcloud Mail"
+type: "Bug"
 labels: ["bug", "0. to triage"]
 body:
 - type: textarea
