fix(deps): update ckeditor to 45 (unified package)
Signed-off-by: Richard Steinmetz <richard@steinmetz.cloud>

--- a/.nextcloudignore
+++ b/.nextcloudignore
@@ -16,7 +16,6 @@ codecov.yml
 .gitignore
 .hg
 /issue_template.md
-/jest.config.js
 /krankerl.toml
 /l10n/no-php
 /.php-cs-fixer.dist.php
@@ -42,3 +41,5 @@ codecov.yml
 /vendor/*/*/tests
 /vendor/*/*/test_data
 /webpack.*
+/vitest.config.*
+/patches
