chore: update calendar-js and timezones together
When calendar-js updates timezones, a version bump is also needed in the mail app.

Signed-off-by: Daniel Kesselberg <mail@danielkesselberg.de>

--- a/renovate.json
+++ b/renovate.json
@@ -170,6 +170,14 @@
 			]
 		},
 		{
+			"groupName": "calendar-js and timezones",
+			"matchPackageNames": [
+				"@nextcloud/calendar-js",
+				"@nextcloud/timezones"
+			],
+			"automerge": false
+		},
+		{
 			"groupName": "CKEditor family",
 			"matchPackageNames": [
 				"@ckeditor/ckeditor5-alignment",
