fix(smime): use proper binary encoding when signing messages
Signed-off-by: Richard Steinmetz <richard@steinmetz.cloud>

--- a/REUSE.toml
+++ b/REUSE.toml
@@ -108,7 +108,7 @@ SPDX-FileCopyrightText = "2024 Nextcloud GmbH and Nextcloud contributors"
 SPDX-License-Identifier = "AGPL-3.0-or-later"
 
 [[annotations]]
-path = ["tests/data/imip/*"]
+path = ["tests/data/imip/*", "tests/data/html-with-signature.txt"]
 precedence = "aggregate"
 SPDX-FileCopyrightText = "2025 Nextcloud GmbH and Nextcloud contributors"
 SPDX-License-Identifier = "AGPL-3.0-or-later"
