--- a/.github/workflows/npm-audit-fix.yml
+++ b/.github/workflows/npm-audit-fix.yml
@@ -21,7 +21,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        branches: ['main', 'stable5.0']
+        branches: ['main', 'stable5.1', 'stable5.0']
 
     name: npm-audit-fix-${{ matrix.branches }}
 
