ci: put stable5.0 into EOL
Signed-off-by: Christoph Wurst <christoph@winzerhof-wurst.at>

--- a/.github/workflows/update-public-suffix-list.yml
+++ b/.github/workflows/update-public-suffix-list.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        branches: ['main', 'stable5.1', 'stable5.0']
+        branches: ['main', 'stable5.1']
 
     name: update-public-suffix-list-${{ matrix.branches }}
 
