--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "build": "NODE_ENV=production webpack --progress --config webpack.prod.js",
     "dev": "NODE_ENV=development webpack --config webpack.dev.js",
     "watch": "NODE_ENV=development webpack --progress --watch --config webpack.dev.js",
-    "lint": "eslint --ext .js,.vue --ignore-pattern tests src",
-    "lint:fix": "eslint --ext .js,.vue --ignore-pattern tests src --fix",
+    "lint": "eslint --ext .js,.ts,.vue --ignore-pattern tests src",
+    "lint:fix": "eslint --ext .js,.ts,.vue --ignore-pattern tests src --fix",
     "test:unit": "jest src/tests/unit",
     "test:unit:watch": "jest --watch src/tests/unit",
     "test:e2e": "playwright test",
@@ -138,6 +138,9 @@
     "sass-loader": "^16.0.5",
     "style-loader": "^4.0.0",
     "svg-inline-loader": "^0.8.2",
+    "ts-jest": "^29.3.4",
+    "ts-loader": "^9.5.2",
+    "typescript": "^5.8.3",
     "url-loader": "^4.1.1",
     "vue-loader": "^15.11.1",
     "vue-template-compiler": "^2.7.16",
