--- a/package.json
+++ b/package.json
@@ -123,6 +123,7 @@
     "eslint": "^8.57.1",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-perfectionist": "^4.14.0",
     "eslint-plugin-vue": "^9.33.0",
     "file-loader": "^6.2.0",
     "jest": "^29.7.0",
