--- a/vendor-bin/cs-fixer/composer.json
+++ b/vendor-bin/cs-fixer/composer.json
@@ -6,6 +6,7 @@
 		"sort-packages": true
 	},
     "require-dev": {
-        "nextcloud/coding-standard": "^1.3.2"
-    }
+		"nextcloud/coding-standard": "^1.3.2",
+		"php-cs-fixer/shim": "^3.75.0"
+	}
 }
