fix(l10n): remove trailing space and allow RTL for drafts
Signed-off-by: Christoph Wurst <christoph@winzerhof-wurst.at>

--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "core-js": "^3.43.0",
     "debounce-promise": "^3.1.2",
     "dompurify": "^3.2.6",
+    "escape-html": "^1.0.3",
     "html-to-text": "^9.0.5",
     "ical.js": "^2.1.0",
     "js-base64": "^3.7.7",
