chore: introduce style lint
Signed-off-by: Hamza <hamzamahjoubi221@gmail.com>

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "watch": "NODE_ENV=development webpack --progress --watch --config webpack.dev.js",
     "lint": "eslint --ext .js,.ts,.vue --ignore-pattern tests src",
     "lint:fix": "eslint --ext .js,.ts,.vue --ignore-pattern tests src --fix",
+    "stylelint": "stylelint \"css/*.css\" \"css/*.scss\" \"src/**/*.scss\" \"src/**/*.vue\"",
+    "stylelint:fix": "stylelint \"css/*.css\" \"css/*.scss\" \"src/**/*.scss\" \"src/**/*.vue\" --fix",
     "test:unit": "jest src/tests/unit",
     "test:unit:watch": "jest --watch src/tests/unit",
     "test:e2e": "playwright test",
@@ -112,6 +114,7 @@
     "@nextcloud/browserslist-config": "^3.0.1",
     "@nextcloud/eslint-config": "^8.4.2",
     "@nextcloud/eslint-plugin": "^2.2.1",
+    "@nextcloud/stylelint-config": "^3.1.0",
     "@playwright/test": "^1.53.0",
     "@types/jest": "^29.5.14",
     "@vue/test-utils": "^1.3.6",
