--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@nextcloud/moment": "^1.3.5",
     "@nextcloud/paths": "^2.2.1",
     "@nextcloud/router": "^3.0.1",
+    "@nextcloud/sharing": "^0.2.4",
     "@nextcloud/timezones": "^0.2.0",
     "@nextcloud/vue": "^8.27.0",
     "@pinia/testing": "^0.1.7",
