--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "vue": "^2.7.16",
     "vue-autosize": "^1.0.2",
     "vue-click-outside": "^1.1.0",
+    "vue-dndrop": "^1.3.4",
     "vue-frag": "^1.4.3",
     "vue-material-design-icons": "^5.3.1",
     "vue-on-click-outside": "^1.0.3",
