--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,14 +15,14 @@ jobs:
     strategy:
       matrix:
         php-versions: ['8.2', '8.3']
-        nextcloud-versions: ['master', 'stable30']
+        nextcloud-versions: ['stable32', 'stable30']
         include:
           - php-versions: '8.1'
             nextcloud-versions: 'stable30'
           - php-versions: '8.4'
             nextcloud-versions: 'stable31'
           - php-versions: '8.5'
-            nextcloud-versions: 'master'
+            nextcloud-versions: 'stable32'
     name: Nextcloud ${{ matrix.nextcloud-versions }} php${{ matrix.php-versions }} unit tests
     steps:
     - name: Set up Nextcloud env
@@ -70,7 +70,7 @@ jobs:
       strategy:
           matrix:
               php-versions: ['8.4']
-              nextcloud-versions: ['master']
+              nextcloud-versions: ['stable32']
               db: ['sqlite', 'mysql', 'pgsql']
               cache: ['nocache']
               include:
@@ -87,7 +87,7 @@ jobs:
                   db: 'mysql'
                   cache: 'redis'
                 - php-versions: 8.5
-                  nextcloud-versions: 'master'
+                  nextcloud-versions: 'stable32'
                   db: 'mysql'
                   cache: 'redis'
       name: ${{ matrix.nextcloud-versions }} w/ php${{ matrix.php-versions }}-${{ matrix.db }}-${{ matrix.cache }} integration tests
