ci: drop stable5.4 from stable branches
Signed-off-by: Christoph Wurst <christoph@winzerhof-wurst.at>

--- a/.github/workflows/update-public-suffix-list.yml
+++ b/.github/workflows/update-public-suffix-list.yml
@@ -14,7 +14,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        branches: ['main', 'stable5.5', 'stable5.4']
+        branches:
+          - 'main'
+          - 'stable5.5'
 
     name: update-public-suffix-list-${{ matrix.branches }}
 
