--- a/.github/workflows/npm-audit-fix-selective.yml
+++ b/.github/workflows/npm-audit-fix-selective.yml
@@ -30,7 +30,7 @@ jobs:
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
         with:
           persist-credentials: false
-          # ref: ${{ matrix.branches }}
+          ref: ${{ github.event.inputs.branch }}
         continue-on-error: true
 
       - name: Read package.json node and npm engines version
@@ -70,8 +70,8 @@ jobs:
     strategy:
       matrix:
         package: ${{ fromJson(needs.matrix.outputs.packages) }}
-        branches:
-          - ${{ github.event.repository.default_branch }}
+        branch:
+          - ${{ github.event.inputs.branch }}
 
     name: npm-audit-fix-${{ matrix.package }}
 
@@ -81,7 +81,7 @@ jobs:
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
         with:
           persist-credentials: false
-          ref: ${{ matrix.branches }}
+          ref: ${{ github.event.inputs.branch }}
         continue-on-error: true
 
       - name: Read package.json node and npm engines version
@@ -116,8 +116,8 @@ jobs:
           committer: GitHub <noreply@github.com>
           author: nextcloud-command <nextcloud-command@users.noreply.github.com>
           signoff: true
-          branch: fix/deps/${{ matrix.package }}-${{ matrix.package }}-npm-audit
-          title: '[${{ matrix.branches }}] fix(deps): update ${{ matrix.package }}'
+          branch: fix/deps/${{ matrix.package }}-${{ matrix.branch }}-npm-audit
+          title: '[${{ matrix.branch }}] fix(deps): update ${{ matrix.package }}'
           body: 'Automated npm audit fix'
           labels: |
             dependencies
