--- a/package.json
+++ b/package.json
@@ -116,8 +116,7 @@
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.28.0",
     "@nextcloud/browserslist-config": "^3.0.1",
-    "@nextcloud/eslint-config": "^8.4.2",
-    "@nextcloud/eslint-plugin": "^2.2.1",
+    "@nextcloud/eslint-config": "^9.0.0-rc.5",
     "@nextcloud/stylelint-config": "^3.1.0",
     "@playwright/test": "^1.54.2",
     "@types/jest": "^29.5.14",
@@ -128,10 +127,6 @@
     "babel-loader": "^10.0.0",
     "babel-loader-exclude-node-modules-except": "^1.2.1",
     "css-loader": "^7.1.2",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-import": "^2.32.0",
-    "eslint-plugin-perfectionist": "^4.15.0",
-    "eslint-plugin-vue": "^9.33.0",
     "file-loader": "^6.2.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
