--- a/package.json
+++ b/package.json
@@ -127,6 +127,7 @@
     "babel-loader": "^10.0.0",
     "babel-loader-exclude-node-modules-except": "^1.2.1",
     "css-loader": "^7.1.2",
+    "eslint-plugin-import": "^2.32.0",
     "file-loader": "^6.2.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
