fixup! chore: upgrade eslint

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "build": "NODE_ENV=production webpack --progress --config webpack.prod.js",
     "dev": "NODE_ENV=development webpack --config webpack.dev.js",
     "watch": "NODE_ENV=development webpack --progress --watch --config webpack.dev.js",
-    "lint": "eslint --ext .js,.ts,.vue --ignore-pattern tests src",
-    "lint:fix": "eslint --ext .js,.ts,.vue --ignore-pattern tests src --fix",
+    "lint": "eslint --ext .js,.ts,.vue .",
+    "lint:fix": "eslint --ext .js,.ts,.vue --fix .",
     "stylelint": "stylelint \"css/*.css\" \"css/*.scss\" \"src/**/*.scss\" \"src/**/*.vue\"",
     "stylelint:fix": "stylelint \"css/*.css\" \"css/*.scss\" \"src/**/*.scss\" \"src/**/*.vue\" --fix",
     "test:unit": "jest src/tests/unit",
