--- a/package.json
+++ b/package.json
@@ -1,23 +1,26 @@
 {
   "name": "nextcloud-mail",
-  "description": "Nextcloud Mail",
   "version": "5.6.0-alpha.1",
-  "author": "Christoph Wurst <christoph@winzerhof-wurst.at>",
-  "license": "AGPL-3.0-only",
   "private": true,
+  "description": "Nextcloud Mail",
+  "license": "AGPL-3.0-only",
+  "author": "Christoph Wurst <christoph@winzerhof-wurst.at>",
   "scripts": {
     "build": "NODE_ENV=production webpack --progress --config webpack.prod.js",
     "dev": "NODE_ENV=development webpack --config webpack.dev.js",
-    "watch": "NODE_ENV=development webpack --progress --watch --config webpack.dev.js",
     "lint": "eslint --ext .js,.ts,.vue .",
     "lint:fix": "eslint --ext .js,.ts,.vue --fix .",
     "stylelint": "stylelint \"css/*.css\" \"css/*.scss\" \"src/**/*.scss\" \"src/**/*.vue\"",
     "stylelint:fix": "stylelint \"css/*.css\" \"css/*.scss\" \"src/**/*.scss\" \"src/**/*.vue\" --fix",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
     "test:unit": "jest src/tests/unit",
     "test:unit:watch": "jest --watch src/tests/unit",
-    "test:e2e": "playwright test",
-    "test:e2e:ui": "playwright test --ui"
+    "watch": "NODE_ENV=development webpack --progress --watch --config webpack.dev.js"
   },
+  "browserslist": [
+    "extends @nextcloud/browserslist-config"
+  ],
   "dependencies": {
     "@ckeditor/ckeditor5-alignment": "44.3.0",
     "@ckeditor/ckeditor5-basic-styles": "44.3.0",
@@ -103,13 +106,6 @@
     "vue-tabs-component": "^1.5.0",
     "webdav": "4.11.5"
   },
-  "browserslist": [
-    "extends @nextcloud/browserslist-config"
-  ],
-  "engines": {
-    "node": "^22.0.0",
-    "npm": "^10.5.0"
-  },
   "devDependencies": {
     "@babel/core": "^7.28.0",
     "@babel/eslint-parser": "^7.28.0",
@@ -127,7 +123,9 @@
     "babel-loader": "^10.0.0",
     "babel-loader-exclude-node-modules-except": "^1.2.1",
     "css-loader": "^7.1.2",
+    "eslint": "^9.37.0",
     "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-jest": "^29.0.1",
     "file-loader": "^6.2.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
@@ -151,5 +149,9 @@
     "webpack": "^5.101.0",
     "webpack-cli": "^5.1.4",
     "webpack-merge": "^5.10.0"
+  },
+  "engines": {
+    "node": "^22.0.0",
+    "npm": "^10.5.0"
   }
 }
