--- a/.github/workflows/psalm-matrix.yml
+++ b/.github/workflows/psalm-matrix.yml
@@ -42,7 +42,7 @@ jobs:
       # do not stop on another job's failure
       fail-fast: false
       matrix:
-        ocp-version: [ 'dev-stable31', 'dev-stable32', 'dev-master' ]
+        ocp-version: [ 'dev-stable32', 'dev-master' ]
 
     name: static-psalm-analysis ${{ matrix.ocp-version }}
     steps:
