--- a/renovate.json
+++ b/renovate.json
@@ -174,6 +174,43 @@
 				"@nextcloud/timezones"
 			],
 			"automerge": false
+		},
+		{
+			"groupName": "CKEditor family",
+			"matchPackageNames": [
+				"@ckeditor/ckeditor5-alignment",
+				"@ckeditor/ckeditor5-basic-styles",
+				"@ckeditor/ckeditor5-block-quote",
+				"@ckeditor/ckeditor5-build-balloon",
+				"@ckeditor/ckeditor5-editor-decoupled",
+				"@ckeditor/ckeditor5-core",
+				"@ckeditor/ckeditor5-dev-utils",
+				"@ckeditor/ckeditor5-editor-balloon",
+				"@ckeditor/ckeditor5-essentials",
+				"@ckeditor/ckeditor5-font",
+				"@ckeditor/ckeditor5-heading",
+				"@ckeditor/ckeditor5-image",
+				"@ckeditor/ckeditor5-link",
+				"@ckeditor/ckeditor5-list",
+				"@ckeditor/ckeditor5-mention",
+				"@ckeditor/ckeditor5-paragraph",
+				"@ckeditor/ckeditor5-remove-format",
+				"@ckeditor/ckeditor5-theme-lark",
+				"@ckeditor/ckeditor5-upload"
+			],
+			"rangeStrategy": "pin",
+			"automerge": false
+		},
+		{
+			"groupName": "Jest family",
+			"matchPackageNames": [
+				"jest",
+				"jest-environment-jsdom",
+				"babel-jest",
+				"@vue/vue2-jest",
+				"@types/jest"
+			],
+			"automerge": true
 		}
 	],
 	"vulnerabilityAlerts": {
