--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "license": "AGPL-3.0-only",
   "private": true,
   "scripts": {
-    "build": "NODE_ENV=production webpack --progress --config webpack.prod.js",
-    "dev": "NODE_ENV=development webpack --config webpack.dev.js",
-    "watch": "NODE_ENV=development webpack --progress --watch --config webpack.dev.js",
+    "build": "webpack --node-env production --progress",
+    "dev": "webpack --node-env development --progress",
+    "watch": "webpack --node-env development --progress --watch",
     "lint": "eslint --ext .js,.ts,.vue --ignore-pattern tests src",
     "lint:fix": "eslint --ext .js,.ts,.vue --ignore-pattern tests src --fix",
     "stylelint": "stylelint \"css/*.css\" \"css/*.scss\" \"src/**/*.scss\" \"src/**/*.vue\"",
@@ -62,8 +62,6 @@
     "printscout": "2.0.3",
     "process": "^0.11.10",
     "ramda": "^0.31.3",
-    "raw-loader": "^4.0.2",
-    "stylelint": "^16.25.0",
     "uuid": "^11.1.0",
     "v-tooltip": "^2.1.3",
     "vue": "^2.7.16",
@@ -90,36 +88,13 @@
     "@nextcloud/babel-config": "^1.2.0",
     "@nextcloud/browserslist-config": "^3.0.1",
     "@nextcloud/eslint-config": "^8.4.2",
-    "@nextcloud/eslint-plugin": "^2.2.1",
     "@nextcloud/stylelint-config": "^3.1.1",
+    "@nextcloud/webpack-vue-config": "^6.3.0",
     "@playwright/test": "^1.56.0",
     "@vitejs/plugin-vue2": "^2.3.4",
     "@vue/test-utils": "^1.3.6",
-    "autoprefixer": "^10.4.21",
-    "babel-loader": "^10.0.0",
-    "babel-loader-exclude-node-modules-except": "^1.2.1",
-    "css-loader": "^7.1.2",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-perfectionist": "^4.15.1",
-    "eslint-plugin-vue": "^9.33.0",
-    "file-loader": "^6.2.0",
-    "node-polyfill-webpack-plugin": "^3.0.0",
     "patch-package": "^8.0.1",
-    "postcss": "^8.5.6",
-    "postcss-loader": "^4.3.0",
-    "sass": "^1.93.2",
-    "sass-loader": "^16.0.5",
-    "style-loader": "^4.0.0",
-    "svg-inline-loader": "^0.8.2",
-    "ts-loader": "^9.5.4",
-    "typescript": "^5.9.3",
-    "url-loader": "^4.1.1",
-    "vitest": "^3.2.4",
-    "vue-loader": "^15.11.1",
-    "vue-template-compiler": "^2.7.16",
-    "webpack": "^5.102.1",
-    "webpack-cli": "^5.1.4",
-    "webpack-merge": "^5.10.0"
+    "vitest": "^3.2.4"
   }
 }
