chore(eslint): upgrade eslint
Signed-off-by: Daniel Kesselberg <mail@danielkesselberg.de>

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "build": "NODE_ENV=production webpack --progress --config webpack.prod.js",
     "dev": "NODE_ENV=development webpack --config webpack.dev.js",
     "watch": "NODE_ENV=development webpack --progress --watch --config webpack.dev.js",
-    "lint": "eslint --ext .js,.ts,.vue --ignore-pattern tests src",
-    "lint:fix": "eslint --ext .js,.ts,.vue --ignore-pattern tests src --fix",
+    "lint": "eslint --ext .js,.ts,.vue .",
+    "lint:fix": "eslint --ext .js,.ts,.vue --fix .",
     "stylelint": "stylelint \"css/*.css\" \"css/*.scss\" \"src/**/*.scss\" \"src/**/*.vue\"",
     "stylelint:fix": "stylelint \"css/*.css\" \"css/*.scss\" \"src/**/*.scss\" \"src/**/*.vue\" --fix",
     "test:unit": "vitest --run",
@@ -89,8 +89,7 @@
   "devDependencies": {
     "@nextcloud/babel-config": "^1.2.0",
     "@nextcloud/browserslist-config": "^3.0.1",
-    "@nextcloud/eslint-config": "^8.4.2",
-    "@nextcloud/eslint-plugin": "^2.2.1",
+    "@nextcloud/eslint-config": "^9.0.0-rc.5",
     "@nextcloud/stylelint-config": "^3.1.1",
     "@playwright/test": "^1.56.0",
     "@vitejs/plugin-vue2": "^2.3.4",
@@ -99,10 +98,9 @@
     "babel-loader": "^10.0.0",
     "babel-loader-exclude-node-modules-except": "^1.2.1",
     "css-loader": "^7.1.2",
-    "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-perfectionist": "^4.15.1",
-    "eslint-plugin-vue": "^9.33.0",
+    "eslint-plugin-vitest-globals": "^1.5.0",
     "file-loader": "^6.2.0",
     "node-polyfill-webpack-plugin": "^3.0.0",
     "patch-package": "^8.0.1",
